2004-02-15  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Add a missing null check.

2004-02-15  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Mark song as dead earlier.

2004-02-15  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:

	Tiny cleanup.

2004-02-15  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:

	Added info about visualization.
	
	* src/About.cs:

	Added translation stuff.

2004-02-15  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/Makefile.am:
	* libmuine/gettext-utils.c: (init_intl):
	* libmuine/gettext-utils.h:
	* src/Muine.cs:
	
	Setup intl on startup.

2004-02-15  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/Album.cs:
	* src/CoverDatabase.cs:
	* src/Metadata.cs:
	* src/NotificationAreaIcon.cs:
	* src/Player.cs:
	* src/PlaylistWindow.cs:
	* src/ProgressWindow.cs:
	* src/SongDatabase.cs:
	* src/StringUtils.cs:

	Hopefully marked all strings for translation.

2004-02-15  Jorn Baayen  <jbaayen@gnome.org>

	* Makefile.am:
	* README:
	* TODO:
	* configure.in:
	* data/glade/AddWindow.glade:
	* data/glade/ErrorDialog.glade:
	* data/glade/ProgressWindow.glade:
	* data/glade/YesNoDialog.glade:
	* po/POTFILES.in:
	* po/cs.po:
	* po/de.po:
	* po/es.po:
	* po/fr.po:
	* po/hr.po:
	* po/nl.po:
	* po/sr.po:
	* po/sr@Latn.po:
	* po/sv.po:
	* src/About.cs:
	* src/Makefile.am:
	* src/Muine.cs:

	First stab at proper translation support. This needs gettext 0.14
	or higher. Will finish tomorrow.

2004-02-15  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/pointer-list-view.c: (pointer_list_view_select_first),
	(pointer_list_view_select_next), (pointer_list_view_select_prev),
	(pointer_list_view_select):

	Move treeview cursor.

2004-02-14  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* libmuine/pointer-list-view.c: (pointer_list_view_select_next),
	(pointer_list_view_select_prev):
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/HandleView.cs:
	* src/KeyUtils.cs: