@@ -1,3 +1,10 @@
+2004-02-16  Jorn Baayen  <jbaayen@gnome.org>
+
+	* src/PlaylistWindow.cs:
+
+	Make window visibility menu item in the tray icon work well when
+	the window is iconified.
+
 2004-02-15  Jorn Baayen  <jbaayen@gnome.org>
 
 	* src/SongDatabase.cs:
